# Venus

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cross-linux-gcc.cmake
build-tools/: main  main.cpp
example/: CMakeLists.txt  main.cpp  vellichor.cpp
include/: CMakeLists.txt  application.h  audio.h  color.h  component.h  container.h  file_util.h  graphics.h  input.h  machine.h  serialize.h  setup.h  shader.h  structure.h  ui.h  vector.h  venus.h
include/GLFW/: glfw3.h  glfw3native.h
include/default_resources/: CMakeLists.txt  main.cpp  path.config  path_test.config
include/default_resources/data/: shader.config
include/default_resources/shaders/: depth_debug_frag.hlsl  object_frag.hlsl  screen_frag.hlsl  screen_vertex.hlsl  simple_frag.hlsl  ui_frag.hlsl  ui_vertex.hlsl
include/glad/: glad.h
misc/default_resources/: CMakeLists.txt  main.cpp  path.config  path_build.config
misc/default_resources/shaders/: depth_vertex.hlsl  screen_vertex.hlsl  simple_frag.hlsl  simple_vertex.hlsl  ui_frag.hlsl
projects/: CMakeLists.txt
projects/SageHaven/: CMakeLists.txt  main.cpp  platformer.cpp  platformer.h
projects/TestProject/: CMakeLists.txt  main.cpp  project.cpp  project.h
projects/TestProject/resources/images/: default.png~
projects/Vellichor/: CMakeLists.txt  main.cpp  vellichor.cpp  vellichor.h
resources/images/Vellichor/: window_texture.png~
resources/images/Vellichor/Mother/Idle/: mother_idle0000.png~
resources/models/: window.mtl
resources/shaders/: screen_frag.hlsl
src/: CMakeLists.txt  application.cpp  audio.cpp  component.cpp  event.cpp  file_util.cpp  global.cpp  graphics.cpp  setup.cpp  shader.cpp  structure.cpp  ui.cpp  vector.cpp
