project(Venus)

FILE(GLOB children ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
SET(dirlist "")
FOREACH(child ${children})
    IF(IS_DIRECTORY ${child} AND NOT ${child} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
        LIST(APPEND dirlist ${child})
        IF(NOT EXISTS ${child}/CMakeLists.txt)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/CMakeLists.txt DESTINATION ${child})
        endif()
        IF(NOT EXISTS ${child}/main.cpp)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/main.cpp DESTINATION ${child})
        endif()
        if(NOT EXISTS ${child}/resources)
            file(MAKE_DIRECTORY ${full_path}/resources)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/audio DESTINATION ${child}/resources)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/data DESTINATION ${child}/resources)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/fonts DESTINATION ${child}/resources)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/images DESTINATION ${child}/resources)
            file(MAKE_DIRECTORY ${child}/resources/models)
            file(COPY ${CMAKE_SOURCE_DIR}/include/default_resources/shaders DESTINATION ${child}/resources)
        endif()
    ENDIF()
ENDFOREACH()

get_filename_component(DIR_NAME ${CMAKE_BINARY_DIR} NAME)
ADD_SUBDIRECTORY(${DIR_NAME})